# musicbrainz-email

./: .gitignore  .travis.yml  README.md  jenkins.sh  mass-mail.cabal  musicbrainz-email.cabal  test.cfg.example  travis.sh
enqueue/: Enqueue.hs  Main.hs
mailer/: Mailer.hs  Main.hs  RateLimit.hs
retry-mail/: Main.hs  Retry.hs
src/: Main.hs
src/MusicBrainz/: Email.hs  Messaging.hs
templates/: password-reset.tpl
test/: Tests.hs
