name: mass-mail
version: 0.1.0.0
synopsis: Send an email to all MusicBrainz editors
homepage: http://github.com/metabrainz/mass-mail
license: GPL-3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
build-type: Simple
cabal-version: >=1.8

executable musicbrainz-emailer
  hs-source-dirs:
    mailer
    src
  main-is: Main.hs
  build-depends:
    aeson >= 0.6.1.0,
    amqp >= 0.3.3,
    base >= 4.5 && < 4.7,
    blaze-builder >= 0.3,
    bytestring >= 0.9.2.1,
    either >= 3.4,
    heist >= 0.11,
    mime-mail >= 0.4.1.2,
    text >= 0.11,
    time >= 1.4,
    transformers >= 0.2.2.0,
    xmlhtml >= 0.2.1
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
               -Werror

executable enqueue-mass-mail
  hs-source-dirs:
    enqueue
    src
  main-is: Main.hs
  build-depends:
    aeson >= 0.6.1.0,
    amqp >= 0.3.3,
    base >= 4.5 && < 4.7,
    mime-mail >= 0.4.1.2,
    optparse-applicative >= 0.5,
    postgresql-simple >= 0.3,
    text >= 0.11
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
               -Werror
